...
    <string name="app_name">OpenSCQ30</string>
    <string name="equalizer">Equalizer</string>
    <string name="hz">%1$d Hz</string>
    <string name="loading">Loading</string>
    <string name="request_permission">Request Permission</string>
    <string name="bluetooth_permission_is_required">Bluetooth Permission is Required</string>
    <string name="none">None</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="delete_confirm">Are you sure you want to delete \"%s\"?</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="info">Info</string>
    <string name="source_code" tools:ignore="TypographyOther">
        &lt;p>The source code and bug reports are available at &lt;a href="https://github.com/Oppzippy/OpenSCQ30">https://github.com/Oppzippy/OpenSCQ30&lt;/a>.&lt;/p>
        &lt;br>

        &lt;p>Copyright (C) Kyle Scheuing&lt;/p>
        &lt;br>
...
    </string>
    <string name="khz">%s kHz</string>
    <string name="replace">Replace</string>
    <string name="connected_to">Connected to %s</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>
    <string name="awaiting_connection">Awaiting Connection</string>
    <string name="quick_presets">Quick Presets</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="settings">Settings</string>
    <string name="unpair_device">Unpair Device</string>
    <string name="unpairing_from_device_name">Unpairing From %s</string>
    <string name="unpair">Unpair</string>
    <string name="no_devices_found">No Devices Found</string>
...
    <string name="unknown">Unknown</string>
    <string name="demo">Demo</string>
    <string name="select_device_model">Select Device Model</string>
    <string name="select_x">Select %s</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="activate">Activate</string>
    <string name="edit">Edit</string>
    <string name="no_quick_presets">No Quick Presets</string>
    <string name="create_quick_preset">Create Quick Preset</string>
    <string name="quick_preset_slot_x">Quick Preset Slot %d</string>
    <string name="notification_permission_is_required">Notification Permission is Required</string>
    <string name="status_notification">Status Notification</string>
    <string name="featured_setting_x">Featured Setting %d</string>
    <string name="setting_id_with_value">%s: %s</string>
    <string name="load_current_settings">Load Current Settings</string>
    <string name="information">Information</string>
    <string name="load_current_settings_help">Load Current Settings will replace all settings in the quick preset with their current values. This will not affect which settings are enabled as a part of the quick preset.</string>
    <string name="close">Close</string>
...
    <string name="error_migrating_legacy_profile">Error migrating legacy profile</string>
    <string name="error_saving_quick_preset">Error saving quick preset</string>
    <string name="error_activating_quick_preset">Error activating quick preset</string>
    <string name="error_changing_settings">Error changing settings</string>
    <string name="error_connecting">Error connecting</string>
    <string name="copy_x_to_clipboard">Copy %s to Clipboard</string>
    <string name="confirm">Confirm</string>
    <string name="import_">Import</string>
    <string name="search">Search</string>
    <string name="no_items_found">No Items Found</string>
    <string name="version_2_breaking_changes">
        &lt;h1>Updated to OpenSCQ30 v2&lt;/h1>
        &lt;br>
        &lt;b>Breaking Changes&lt;/b>
...
    <string name="connect_to_a_device_to_configure_the_widget">Connect to a device to configure the widget</string>
    <string name="configure_later">Configure Later</string>
    <string name="headphones">Headphones</string>
    <string name="earbuds">Earbuds</string>
    <string name="audio_speaker">Speaker</string>
    <string name="preset">Preset</string>
    <string name="custom">Custom</string>
    <string name="selected">Selected</string>
    <string name="theme">Theme</string>
    <string name="system_theme">System Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="dynamic_color">Dynamic Color</string>
...
