package com.oppzippy.openscq30.ui.soundmode

enum class NoiseCancelingType {
    None,
    Normal,
    Custom,
}
