...

@Preview(showBackground = true)
@Composable
private fun PreviewProfileSelectionRow() {
    OpenSCQ30Theme {
        ProfileSelectionRow(
            name = "Test Profile",
            volumeAdjustments = listOf(0.0, 1.0, 5.0, 10.0, -10.0, -5.0, -1.0, 0.0),
        )
    }
}

